# SniffleCut

./: LICENSE  README.md  pyproject.toml  sniffle_cut_fcpxml.py  sniffle_detect_and_train.py  sniffle_head.pt
beats/: backbone.py
training_checkpoints/: sniffle_head_3epochs.pt  sniffle_head_4epochs.pt
