[project]
name = "SniffleCut"
version = "0.1.0"
description = "AI-powered sniffle sound event detection and automatic sniffle removal script for Final Cut Pro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "transformers>=4.57.3",
]
